@@ -22,6 +22,7 @@
       <affiliation>
         <address><email>spadix@users.sourceforge.net</email></address>
       </affiliation>
+      <contrib>Lead developer</contrib>
     </author>
 
     <copyright>
